// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an blog page with a post unchanged 1`] = `
<div>
  <div
    class="shell"
  >
    <nav
      aria-label="Main"
      class="rail"
      data-testid="navigation"
    >
      <a
        aria-label="Tania Papazafeiropoulou, home"
        class="brand"
        href="/"
      >
        <span
          aria-hidden="true"
          class="avatar"
        />
        tania
      </a>
      <ul
        class="links"
      >
        <li>
          <a
            href="/"
          >
            home
          </a>
        </li>
        <li>
          <a
            href="/work"
          >
            work
          </a>
        </li>
        <li>
          <a
            aria-current="page"
            class="active"
            href="/blog"
          >
            blog
          </a>
        </li>
        <li>
          <a
            href="/cv"
          >
            cv
          </a>
        </li>
        <li>
          <a
            href="/about"
          >
            about
          </a>
        </li>
      </ul>
      <span
        class="grow"
      />
      <button
        aria-label="Switch to dark mode"
        class="themeToggle"
        title="Switch to dark mode"
        type="button"
      >
        ◐ 
        light
      </button>
      <div
        class="foot"
      >
        <a
          href="http://www.linkedin.com/in/taniapapazaf"
          target="_linkedin"
          title="Linkedin profile - in/taniapapazaf"
        >
          linkedin
        </a>
         · 
        <a
          href="http://www.github.com/altany"
          target="_github"
          title="Github profile - altany"
        >
          github
        </a>
         · 
        <a
          href="https://twitter.com/_Tany_"
          target="_twitter"
          title="Twitter profile - @_Tany_"
        >
          twitter
        </a>
        <br />
        <a
          href="mailto:hello@tany4.com"
          title="Email - hello@tany4.com"
        >
          hello@tany4.com
        </a>
      </div>
    </nav>
    <main
      class="main"
    >
      <div
        class="split"
      >
        <section
          class="pane"
        >
          <h1
            class="title"
          >
            Blog
          </h1>
          <p
            class="lede"
          >
            I write about React, React Native, AI tooling, debugging, testing, performance and general engineering practices. These posts capture lessons learned from real-world work, conference talks, and experiments.
          </p>
          <div
            aria-label="Posts by topic"
            class="term "
          >
            <div>
              <div>
                <span
                  class="prompt"
                >
                  tania@tany4
                </span>
                 ~ % 
                ls posts | count-by topic
              </div>
            </div>
            <div>
              <span
                class="prompt"
              >
                tania@tany4
              </span>
               ~ % 
              <span
                class="caret"
              />
            </div>
          </div>
          <ul
            class="rows"
          >
            <li>
              <a
                href="/blog/posts/123"
              >
                <span
                  class="rowTitle"
                >
                  I am the titel
                </span>
                <span
                  class="rowMeta"
                >
                  <time
                    datetime="2020-12-19T15:49:00+0200"
                  >
                    Dec 2020
                  </time>
                </span>
              </a>
            </li>
          </ul>
        </section>
        <aside
          class="pane side"
        >
          <div
            class="sticky"
          >
            <div
              class="label"
            >
              Filter
            </div>
            <div
              aria-label="Filter posts by topic"
              class="tags"
              role="group"
            >
              <button
                aria-pressed="true"
                class="tag tagOn"
                type="button"
              >
                all · 
                1
              </button>
            </div>
          </div>
        </aside>
      </div>
    </main>
  </div>
</div>
`;

exports[`renders an empty blog page unchanged 1`] = `
<div>
  <div
    class="shell"
  >
    <nav
      aria-label="Main"
      class="rail"
      data-testid="navigation"
    >
      <a
        aria-label="Tania Papazafeiropoulou, home"
        class="brand"
        href="/"
      >
        <span
          aria-hidden="true"
          class="avatar"
        />
        tania
      </a>
      <ul
        class="links"
      >
        <li>
          <a
            href="/"
          >
            home
          </a>
        </li>
        <li>
          <a
            href="/work"
          >
            work
          </a>
        </li>
        <li>
          <a
            aria-current="page"
            class="active"
            href="/blog"
          >
            blog
          </a>
        </li>
        <li>
          <a
            href="/cv"
          >
            cv
          </a>
        </li>
        <li>
          <a
            href="/about"
          >
            about
          </a>
        </li>
      </ul>
      <span
        class="grow"
      />
      <button
        aria-label="Switch to dark mode"
        class="themeToggle"
        title="Switch to dark mode"
        type="button"
      >
        ◐ 
        light
      </button>
      <div
        class="foot"
      >
        <a
          href="http://www.linkedin.com/in/taniapapazaf"
          target="_linkedin"
          title="Linkedin profile - in/taniapapazaf"
        >
          linkedin
        </a>
         · 
        <a
          href="http://www.github.com/altany"
          target="_github"
          title="Github profile - altany"
        >
          github
        </a>
         · 
        <a
          href="https://twitter.com/_Tany_"
          target="_twitter"
          title="Twitter profile - @_Tany_"
        >
          twitter
        </a>
        <br />
        <a
          href="mailto:hello@tany4.com"
          title="Email - hello@tany4.com"
        >
          hello@tany4.com
        </a>
      </div>
    </nav>
    <main
      class="main"
    >
      <div
        class="split"
      >
        <section
          class="pane"
        >
          <h1
            class="title"
          >
            Blog
          </h1>
          <p
            class="lede"
          >
            I write about React, React Native, AI tooling, debugging, testing, performance and general engineering practices. These posts capture lessons learned from real-world work, conference talks, and experiments.
          </p>
          <div
            aria-label="Posts by topic"
            class="term "
          >
            <div>
              <div>
                <span
                  class="prompt"
                >
                  tania@tany4
                </span>
                 ~ % 
                ls posts | count-by topic
              </div>
            </div>
            <div>
              <span
                class="prompt"
              >
                tania@tany4
              </span>
               ~ % 
              <span
                class="caret"
              />
            </div>
          </div>
          <ul
            class="rows"
          />
        </section>
        <aside
          class="pane side"
        >
          <div
            class="sticky"
          >
            <div
              class="label"
            >
              Filter
            </div>
            <div
              aria-label="Filter posts by topic"
              class="tags"
              role="group"
            >
              <button
                aria-pressed="true"
                class="tag tagOn"
                type="button"
              >
                all · 
                0
              </button>
            </div>
          </div>
        </aside>
      </div>
    </main>
  </div>
</div>
`;
